--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,11 +39,12 @@ jobs:
         if: matrix.os == 'ubuntu-20.04'
         shell: bash
         run: |
+          git clone https://github.com/godaddy/asherah-ruby.git
+          cd asherah-ruby
           docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-          docker run --rm --platform=linux/arm64/v8 \
+          docker run --rm -v "$(pwd):/asherah-ruby" --platform=linux/arm64/v8 \
             ruby:${{matrix.ruby}} \
-            gem install asherah --pre \
-            gem which asherah \
+            /bin/sh -c "cd /asherah-ruby; bundle install; gem install asherah --pre; gem which asherah; ruby spec/smoke_test.rb"
 
       - name: Install Darwin x86_64-darwin
         if: matrix.os == 'macos-11'
