--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,15 +39,16 @@ jobs:
         run: |
           git clone https://github.com/godaddy/asherah-ruby.git
           cd asherah-ruby
+          bundle install
           gem install asherah --pre
           gem which asherah
-          bundle install
           ruby spec/smoke_test.rb
 
       - name: Test Asherah on arm64
         if: matrix.qemu == true
         shell: bash
         run: |
+          git clone https://github.com/godaddy/asherah-ruby.git
           docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
           docker run --rm -v "$(pwd):/asherah-ruby" --platform=linux/arm64/v8 \
             ruby:${{matrix.ruby}} \
