--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,6 +50,7 @@ jobs:
         shell: bash
         run: |
           git clone https://github.com/godaddy/asherah-ruby.git
+          cd asherah-ruby
           docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
           docker run --rm -v "$(pwd):/asherah-ruby" --platform=linux/arm64/v8 \
             ruby:${{matrix.ruby}} \
