--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,9 @@ jobs:
           - os: ubuntu-20.04
             ruby: '3.1'
             qemu: true
+          - os: macos-11
+            ruby: '3.1'
+            qemu: true
       fail-fast: false
 
     steps:
