--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
           ruby spec/smoke_test.rb
 
       - name: Test Asherah on arm64 linux
-        if: matrix.qemu == true && matrix.os == ubuntu-20.04
+        if: ${{ matrix.qemu == true && matrix.os == 'ubuntu-20.04' }}
         shell: bash
         run: |
           git clone https://github.com/godaddy/asherah-ruby.git
@@ -84,7 +84,7 @@ jobs:
           docker run --rm hello-world
 
       - name: Test Asherah on arm64 macos
-        if: matrix.qemu == true && matrix.os == macos-11
+        if: ${{ matrix.qemu == true && matrix.os == 'macos-11' }}
         shell: bash
         run: |
           git clone https://github.com/godaddy/asherah-ruby.git
